Finish the page and fix a few alignment problems on the left side panel

--- a/styles/style.css
+++ b/styles/style.css
@@ -19,8 +19,7 @@ div.main-container {
     background: url("../images/assault-rifle.jpg") center;
     background-size: cover;
     background-repeat: no-repeat;
-    max-width: auto;
-    height: 100vh;
+    height: 110vh;
     flex: 1 1 auto;
 }
 
@@ -72,7 +71,7 @@ div.main-container {
 }
 
 .form-section {
-    box-shadow: 2px 2px 2px rgba(30, 30, 30, 0.2);
+    box-shadow: 5px 7px 4px rgba(30, 30, 30, 0.2);
     background-color: rgb(255, 255, 255);
     flex: 0 1 auto;
     max-height: min(300px, 30vh);
@@ -112,5 +111,34 @@ input {
     flex: 0 1 auto;
     max-width: 45ch;
     height: 30px;
+}
+
+#create-acc-btn {
+    font-weight: 700;
+    color: black;
+    border: 1px solid #317dad;
+    border-radius: 10px;
+    background-image: white;
+    box-shadow: 2px 2px 3px black;
+    width : 20%;
+    height: 3rem;
+    font-size: 1rem;
+}
+
+#create-acc-btn:hover {
+    background-color: #317dad;
+    color: white;
+    transform: scale(1.1);
+    transition: transform 0.5s;
+}
+
+.account-creation-section > p {
+    font-size: 1.2rem;
+}
+
+.account-creation-section > p > a{
+    color: #185175;
+    text-decoration: none;
+    font-weight: 800;
 }
 
